        Solaris:  per-filesystem        CIFS
        NetBSD:   per-disk              NFS
        OpenBSD:  per-disk              NFS
        FreeBSD:  per-disk              NFS, ZFS
        Linux:    per-filesystem        FUSE
        MacOS:    per-disk
        AIX:

New: The per-process read/write statistics is now displayed in Monit GUI and CLI
on Linux and MacOS.

New: The Monit HTTP interface now allows to set the SSL/TLS version as well. The
syntax follows the generic SSL/TLS options settings, which was introduced in
Monit 5.15, example:
    set httpd port 2812
        with ssl {
           pemfile: /etc/ssl/certs/monit.pem
           version: TLSv12
        }
        allow admin:monit

New: The SSL 3DES ciphers are disabled by default now (vulnerable to Sweet32 attacks).

New: Issue #509: Added support to override the SSL/TLS ciphers list and enabled
server-side ciphers preference. Example (using monit's default ciphers string):
    set ssl {
        ciphers: "ALL:!DES:!3DES:!RC4:!aNULL:!LOW:!EXP:!IDEA:!MD5:@STRENGTH"
    }

New: The certificate minimum valid days test now triggers the timestamp event instead
of connection event.

Fixed: Issue #488: Ping test may fail if the machine performs other ping tests with small payload.

Fixed: Issue #543: Ping test may timeout prematurely on machine with heavy ICMP traffic.

Fixed: Issue #495: Position independent CSRF cookie value.

Fixed: Issue #496: Allow overriding the Accept HTTP header

Fixed: Issue #501: check program may fail when parent service is not monitored every cycle and multiple
services depend on it.

Fixed: Issue #510: The "set ssl" options defaults had no effect on the Monit HTTPD interface.

Fixed: Issue #515: The compression may fail of response body is empty and zlib version <= 1.2.3.

Fixed: Issue #537: Monit HTTP server could not start if no network interface available

Fixed: Monit HTTP GUI: Safari may fail to load the page if SSL is enabled.
